fix(RaisedButton): Prevent overflow.

--- a/src/components/styles/RaisedButton.css
+++ b/src/components/styles/RaisedButton.css
@@ -6,9 +6,12 @@
   padding: 5px 15px 10px 15px;
   position: relative;
   text-align: center;
-  width: 100px;
+  width: 150px;
   height: 30px;
   line-height: 35px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
 }
 .Icon {
   transform: translateY(5px);
